--- a/silver_l10n_ve_base/views/res_partner_address_views.xml
+++ b/silver_l10n_ve_base/views/res_partner_address_views.xml
@@ -22,7 +22,6 @@
             </xpath-->
 
 
-
              <xpath expr="//field[@name='street']" position="attributes">
                 <attribute name="required">0</attribute>
             </xpath>
@@ -55,6 +54,33 @@
             <xpath expr="//field[@name='city_id']" position="attributes">
                 <attribute name="required">0</attribute>
             </xpath>
+
+
+ <xpath expr="//div[@class='o_address_format']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+
+                    <xpath expr="//span[@name='address_name']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+<!--xpath expr="//field[@name='website'" position="before">
+                    <br/>
+</xpath-->
+<xpath expr="//div[@name='vat_vies_container'" position="replace">
+
+</xpath>
+                    <xpath expr="//div[@name='l10n_ve_address_format']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                                <xpath expr="//label[@for='vat']" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+
+    <xpath expr="//label[@for='vat']" position="replace">
+
+                </xpath>
+
             <!--xpath expr="//label[@for='vat']" position="attributes">
                 <attribute name="invisible">1</attribute>
             </xpath-->
