--- a/silver_base/views/res_partner_views.xml
+++ b/silver_base/views/res_partner_views.xml
@@ -6,16 +6,9 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//div[@class='o_address_format']" position="attributes">
-                    <attribute name="invisible">1</attribute>
-                </xpath>
 
 
-                    <xpath expr="//span[@name='address_name']" position="attributes">
-                    <attribute name="invisible">1</attribute>
-                </xpath>
-
-            <xpath expr="//div[@class='o_address_format']" position="after">
+            <xpath expr="//field[@name='parent_id']" position="after">
 
                     <field name="silver_address_id"
                            placeholder="Seleccione una dirección..."
